Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,6 @@ steps:
 - script: |
     python --version
     pip list 
- #  pip install mkdocs
- #  mkdocs build
+    pip install mkdocs
+    mkdocs serve
   displayName: 'Run mkdocs project'
