--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,6 @@ pool:
 
 steps:
 - script: |
-    python --version
-    pip list 
     pip install mkdocs
-    mkdocs serve
+#    mkdocs serve
   displayName: 'Run mkdocs project'
