--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
     targetType: 'inline'
     script: |
       # Write your commands here
-      
+      pip install -U wheel
+      pip install tornado
       pip install mkdocs
   displayName: 'Run mkdocs project'
