Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,5 @@ steps:
       pip install -U wheel
       pip install tornado
       pip install mkdocs
+      mkdocs serve
   displayName: 'Run mkdocs project'
