--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,6 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: |
 - task: Bash@3
   inputs:
     targetType: 'inline'
@@ -19,5 +18,5 @@ steps:
       pip install -U wheel
       pip install tornado
       pip install mkdocs
-      mkdocs serve
+      mkdocs build
   displayName: 'Run mkdocs project'
