--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,5 @@ steps:
       pip install -U wheel
       pip install tornado
       pip install mkdocs
-      mkdocs build
+      pip list
   displayName: 'Run mkdocs project'
