--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,14 +15,14 @@ steps:
     targetType: 'inline'
     script: |
       # Write your commands here
-      pip install -U wheel
-      pip install tornado
-      pip install mkdocs
+#      pip install -U wheel
+#      pip install tornado
+#      pip install mkdocs
       pip list
   displayName: 'installing required packages'
 - task: Bash@3
   inputs:
     targetType: 'inline'
     script: |    
-      mkdocs serve
+#      mkdocs serve
   displayName: 'building the mkdocs project'
