--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: MkDocs Basic theme
 theme:
-    name: basictheme
+    name: mkdocs
 
 repo_url: https://github.com/d0ugal/mkdocs-basic-theme
