--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,4 +7,11 @@ steps:
    mkdocs serve  
   displayName: Install the MkDocs + do a build
 
-
+- task: AzureFileCopy@2
+  displayName: AzureBlob File Copy
+  inputs:
+    SourcePath: site
+    azureSubscription: 7b5d73a6-e1a1-4faa-a156-e53b718610cc
+    Destination: azureblobstorageaccount
+    storage: harrystorage2020
+    ContainerName: '$web'
