--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ steps:
     SourcePath: site
     azureSubscription: $(ID)
     Destination: $(storageaccount)
-    storage: harrystorage2020
+    storage: azureBlob
     ContainerName: '$web'
