Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ steps:
     SourcePath: site
     azureSubscription: $(ID)
     Destination: $(storageaccount)
-    storage: azureBlob
+    storage: AzureBlob
     ContainerName: '$web'
